# kexi

./: .arcconfig  .flatpak-manifest.json  .gitignore  .gitlab-ci.yml  .kde-ci.yml  .reviewboardrc  AUTHORS  CMakeLists.txt  COPYING.LIB  CTestConfig.cmake  KexiProducts.cmake  README.PACKAGERS  README.PACKAGERS.md  README.md  kexi_xgettext.sh  kundo2_aware_xgettext.sh
plugins/: CMakeLists.txt
src/: .krazy  CMakeLists.txt  KexiVersion.h.cmake  Mainpage.dox  Messages.sh  config-kexi.h.cmake  kexi.appdata.xml  kexi.desktop  kexi_global.h  main.cpp
src/core/: CMakeLists.txt  KexiCommandLineOptions.cpp  KexiCommandLineOptions.h  KexiFileFilters.cpp  KexiFileFilters.h  KexiGlobal.cpp  KexiGroupButton.cpp  KexiGroupButton.h  KexiMainWindowIface.cpp  KexiMainWindowIface.h  KexiMigrateManagerInterface.h  KexiRecentProjects.cpp  KexiSearchableModel.cpp  KexiSearchableModel.h  KexiView.cpp  KexiView.h  KexiWindow.cpp  KexiWindow.h  KexiWindowData.h  kexi.cpp  kexi.h  kexiaboutdata.cpp  kexiactioncategories.cpp  kexiactionproxy.cpp  kexiactionproxy.h  kexiblobbuffer.cpp  kexidataiteminterface.cpp  kexidataiteminterface.h  kexidbconnectionset.cpp  kexidbconnectionset.h  kexidbshortcutfile.cpp  kexidragobjects.cpp  kexiguimsghandler.cpp  kexiguimsghandler.h  kexihandler.desktop  kexiinternalpart.cpp  kexiinternalpart.h  kexipart.cpp  kexipart.h  kexipartbase.cpp  (+25 more)
src/data/: CMakeLists.txt  org.kde.kexi.appdata.xml  org.kde.kexi.appdata.xml.cmake  org.kde.kexi.desktop  org.kde.kexi.desktop.cmake
src/doc/: README
src/doc/dev/: CHANGELOG-Kexi-js  advantages.txt  compile_time_options.txt  kexi_final_mode.txt  kexi_i18n_guidelines.txt  kexi_import.txt  kexi_issues.txt  (+2 more)
src/examples/: CMakeLists.txt  Simple_Database.kexi  Simple_Database.kexi.sql  build_kexi_file.sh  build_kexi_files.sh  update_sql_files.sh
src/formeditor/: CMakeLists.txt  FormWidget.cpp  FormWidgetInterface.cpp  FormWidgetInterface.h  KexiFormWidgetsPluginMetaData.cpp  WidgetInfo.cpp  WidgetInfo.h  WidgetTreeWidget.cpp  WidgetTreeWidget.h  commands.cpp  commands.h  connectiondialog.cpp  container.cpp  container.h  editlistviewdialog.cpp  events.cpp  form.cpp  form.h  formIO.cpp  formIO.h  form_p.cpp  form_p.h  kexiactionselectiondialog.cpp  kexiactionselectiondialog_p.h  kexiformeventhandler.cpp  libactionwidget.cpp  libactionwidget.h  objecttree.cpp  objecttree.h  resizehandle.cpp  resizehandle.h  richtextdialog.cpp  richtextdialog.h  tabstopdialog.cpp  tabstopdialog.h  utils.cpp  utils.h  widgetfactory.cpp  widgetfactory.desktop  widgetfactory.h  (+3 more)
src/kexiutils/: CMakeLists.txt  FlowLayout.cpp  FlowLayout.h  FontSettings_p.cpp  FontSettings_p.h  InternalPropertyMap.cpp  InternalPropertyMap.h  KexiAnimatedLayout.h  KexiAnimatedLayout_p.h  KexiAssistantPage.cpp  KexiAssistantPage.h  KexiAssistantWidget.cpp  KexiAssistantWidget.h  KexiCategorizedView.h  KexiCloseButton.cpp  KexiCloseButton.h  KexiCommandLinkButton.h  KexiContextMessage.cpp  KexiContextMessage.h  KexiFadeWidgetEffect.cpp  KexiFadeWidgetEffect.h  KexiFadeWidgetEffect_p.h  KexiIcon.h  KexiJsonTrader.cpp  KexiJsonTrader.h  KexiLinkButton.cpp  KexiLinkButton.h  KexiLinkWidget.cpp  KexiLinkWidget.h  KexiPluginMetaData.cpp  KexiPluginMetaData.h  KexiPushButton.cpp  KexiPushButton.h  KexiStyle.cpp  KexiStyle.h  KexiTestHandler.cpp  KexiTestHandler.h  KexiTester.cpp  KexiTester.h  KexiTitleLabel.cpp  (+11 more)
src/main/: CMakeLists.txt  KexiBugReportDialog.cpp  KexiBugReportDialog.h  KexiGlobalViewModeSelector.cpp  KexiGlobalViewModeSelector.h  KexiGlobalViewModeSelector_p.h  KexiMainWindow.cpp  KexiMainWindow.h  KexiMainWindow_p.cpp  KexiMainWindow_p.h  KexiMenuWidget.cpp  KexiMenuWidget.h  KexiMenuWidget_p.h  KexiModeSelector.cpp  KexiModeSelector.h  KexiModeSelector_p.h  KexiObjectViewTabWidget.cpp  KexiObjectViewTabWidget.h  KexiObjectViewWidget.cpp  KexiObjectViewWidget.h  KexiPropertyPaneWidget.cpp  KexiPropertyPaneWidget.h  KexiRegisterResource_p.h  KexiSearchLineEdit.cpp  KexiSearchLineEdit.h  KexiUserFeedbackAgent.cpp  KexiUserFeedbackAgent.h  kexifinddialog.cpp  kexifinddialog.h  kexifinddialog.ui  kexistatusbar.h
src/migration/: AlterSchemaTableModel.cpp  AlterSchemaTableModel.h  AlterSchemaWidget.cpp  AlterSchemaWidget.h  CMakeLists.txt  KexiMigratePluginMetaData.cpp  KexiMigratePluginMetaData.h  KexiSqlMigrate.cpp  KexiSqlMigrate.h  importoptionsdlg.cpp  importoptionsdlg.h  importtablewizard.cpp  importtablewizard.h  importwizard.cpp  importwizard.h  keximigrate.cpp  keximigrate.h  keximigratedata.cpp  keximigratedata.h  keximigration_driver.desktop  migratemanager.cpp  migratemanager.h  migratemanager_p.h
src/mobile/: CMakeLists.txt  KexiMobileMainWindow.cpp  KexiMobileMainWindow.h  KexiMobileNavigator.cpp  KexiMobileNavigator.h  KexiMobileToolbar.cpp  KexiMobileToolbar.h  KexiMobileWidget.cpp  KexiMobileWidget.h  main.cpp
src/pics/: CMakeLists.txt  breeze.rcc.md5  colorize.cmake  fetch_global_breeze_rcc.cmake  kexi_breeze.qrc  kexi_breeze_files.cmake  update_kexi_breeze_list.sh
src/plugins/: CMakeLists.txt
src/tests/: CMakeLists.txt
src/tools/: find_custom_widget_headers_in_ui.sh
src/widget/: CMakeLists.txt  KexiConnectionSelector.ui  KexiConnectionSelectorWidget.cpp  KexiConnectionSelectorWidget.h  KexiDBCaptionPage.cpp  KexiDBCaptionPage.h  KexiDBCaptionPage.ui  KexiDBPasswordDialog.cpp  KexiDBTitlePage.h  KexiDataSourceComboBox.cpp  KexiDataSourceComboBox.h  KexiFileDialog.cpp  KexiFileDialog.h  KexiFileRequester.cpp  KexiFileRequester.h  KexiFileWidget.cpp  KexiFileWidget.h  KexiFileWidgetInterface.cpp  KexiFileWidgetInterface.h  KexiListView.cpp  KexiListView.h  KexiListView_p.h  KexiNameDialog.cpp  KexiNameDialog.h  KexiNameWidget.cpp  KexiObjectInfoLabel.cpp  KexiObjectInfoLabel.h  KexiPasswordWidget.cpp  KexiProjectSelector.ui  KexiProjectSelectorWidget.cpp  KexiProjectSelectorWidget.h  KexiServerDriverNotFoundMessage.cpp  KexiStartupFileHandler.cpp  KexiStartupFileHandler.h  KexiWidgetWidthAnimator.cpp  KexiWidgetWidthAnimator.h  kexicharencodingcombobox.cpp  kexicharencodingcombobox.h  kexidbconnectionwidget.cpp  kexidbconnectionwidget.h  (+15 more)
(+653 files in other folders)
